--- a/app/src/main/res/layout/activity_company_edit_profile.xml
+++ b/app/src/main/res/layout/activity_company_edit_profile.xml
@@ -15,110 +15,121 @@
         android:orientation="vertical"
         android:padding="20dp">
 
-        <TextView
+        <ScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="24sp"
-            android:text="@string/edit_profile"
-            android:gravity="center"
-            android:textColor="@color/blue"
-            android:textStyle="bold"/>
+            app:layout_constraintLeft_toLeftOf="parent">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="16sp"
-            android:text="Contact Number"
-            android:textColor="@color/black"
-            android:layout_marginTop="20dp"/>
-
-        <EditText
-            android:id="@+id/et_editCompanyContactNumber"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="09173098555"
-            android:ems="10"
-            android:inputType="text|number"
-            android:textSize="14dp"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="16sp"
-            android:text="About"
-            android:textColor="@color/black"
-            android:layout_marginTop="20dp"/>
-
-        <EditText
-            android:id="@+id/et_editCompanyAbout"
-            android:layout_width="match_parent"
-            android:layout_height="150dp"
-            android:textSize="14dp"
-            android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat"
-            android:ems="10"
-            android:inputType="text|textMultiLine"
-            android:gravity="top|left"
-            android:lines="20"
-            android:minLines="5"
-            android:scrollHorizontally="false"
-            android:scrollbars="vertical"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="16sp"
-            android:text="Location"
-            android:textColor="@color/black"
-            android:layout_marginTop="20dp"/>
-
-        <EditText
-            android:id="@+id/et_editCompanyLocation"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Location"
-            android:ems="10"
-            android:textSize="14dp"
-            android:inputType="text"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="16sp"
-            android:text="Website"
-            android:textColor="@color/black"
-            android:layout_marginTop="20dp"/>
-
-        <EditText
-            android:id="@+id/et_editCompanyWebsite"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="www.companywebsite.com"
-            android:textSize="14dp"
-            android:ems="10"
-            android:inputType="textUri"/>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dip"
-            android:gravity="center|bottom"
-            android:orientation="vertical"
-            android:layout_weight="1">
-
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/btn_editCompanySave"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/save"
-                android:backgroundTint="@color/blue"
-                android:textColor="@color/white"/>
+                android:orientation="vertical">
 
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/btn_editCompanyCancel"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/cancel"/>
-        </LinearLayout>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="24sp"
+                    android:text="@string/edit_profile"
+                    android:gravity="center"
+                    android:textColor="@color/blue"
+                    android:textStyle="bold"/>
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="16sp"
+                    android:text="Contact Number"
+                    android:textColor="@color/black"
+                    android:layout_marginTop="20dp"/>
+
+                <EditText
+                    android:id="@+id/et_editCompanyContactNumber"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="09173098555"
+                    android:ems="10"
+                    android:inputType="text|number"
+                    android:textSize="14dp"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="16sp"
+                    android:text="About"
+                    android:textColor="@color/black"
+                    android:layout_marginTop="20dp"/>
+
+                <EditText
+                    android:id="@+id/et_editCompanyAbout"
+                    android:layout_width="match_parent"
+                    android:layout_height="150dp"
+                    android:textSize="14dp"
+                    android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat"
+                    android:ems="10"
+                    android:inputType="text|textMultiLine"
+                    android:gravity="top|left"
+                    android:lines="20"
+                    android:minLines="5"
+                    android:scrollHorizontally="false"
+                    android:scrollbars="vertical"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="16sp"
+                    android:text="Location"
+                    android:textColor="@color/black"
+                    android:layout_marginTop="20dp"/>
+
+                <EditText
+                    android:id="@+id/et_editCompanyLocation"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Location"
+                    android:ems="10"
+                    android:textSize="14dp"
+                    android:inputType="text"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="16sp"
+                    android:text="Website"
+                    android:textColor="@color/black"
+                    android:layout_marginTop="20dp"/>
+
+                <EditText
+                    android:id="@+id/et_editCompanyWebsite"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="www.companywebsite.com"
+                    android:textSize="14dp"
+                    android:ems="10"
+                    android:inputType="textUri"/>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="0dip"
+                    android:gravity="center|bottom"
+                    android:orientation="vertical"
+                    android:layout_weight="1">
+
+                    <androidx.appcompat.widget.AppCompatButton
+                        android:id="@+id/btn_editCompanySave"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/save"
+                        android:backgroundTint="@color/blue"
+                        android:textColor="@color/white"/>
+
+                    <androidx.appcompat.widget.AppCompatButton
+                        android:id="@+id/btn_editCompanyCancel"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/cancel"/>
+                </LinearLayout>
+            </LinearLayout>
+        </ScrollView>
     </LinearLayout>
 
     <com.google.android.material.navigation.NavigationView
