--- a/app/src/main/res/layout/activity_intern_internship_details.xml
+++ b/app/src/main/res/layout/activity_intern_internship_details.xml
@@ -15,116 +15,127 @@
     android:padding="10dp"
     android:background="@color/grey">
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:background="@color/white"
-        android:padding="10dp">
+        app:layout_constraintLeft_toLeftOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/tv_internshipDetails_title"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="18sp"
-                android:text="Internship Title"
+                android:orientation="vertical"
+                android:background="@color/white"
+                android:padding="10dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/tv_internshipDetails_title"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="18sp"
+                        android:text="Internship Title"
+                        android:textColor="@color/black"
+                        android:layout_weight="1"
+                        android:textStyle="bold"/>
+
+                    <androidx.appcompat.widget.AppCompatButton
+                        android:id="@+id/btn_tv_internshipDetails_apply"
+                        android:layout_width="100dp"
+                        android:layout_height="40dp"
+                        android:text="Apply"
+                        android:textColor="@color/white"
+                        android:backgroundTint="@color/blue"/>
+
+                    <androidx.appcompat.widget.AppCompatButton
+                        android:id="@+id/btn_tv_internshipDetails_feedback"
+                        android:layout_width="100dp"
+                        android:layout_height="40dp"
+                        android:text="Share"
+                        android:textColor="@color/white"
+                        android:backgroundTint="@color/blue"
+                        android:visibility="gone"/>
+
+                </LinearLayout>
+
+                <TextView
+                    android:id="@+id/tv_internshipDetails_function"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="16dp"
+                    android:text="Function"
+                    android:textColor="@color/black"/>
+
+                <TextView
+                    android:id="@+id/tv_internshipDetails_type"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="16dp"
+                    android:text="Type"
+                    android:textColor="@color/black"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:background="@color/white"
+                android:padding="10dp"
+                android:layout_marginTop="10dp">
+
+                <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="16dp"
+                android:text="Description"
                 android:textColor="@color/black"
-                android:layout_weight="1"
                 android:textStyle="bold"/>
 
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/btn_tv_internshipDetails_apply"
-                android:layout_width="100dp"
-                android:layout_height="40dp"
-                android:text="Apply"
-                android:textColor="@color/white"
-                android:backgroundTint="@color/blue"/>
+                <TextView
+                    android:id="@+id/tv_internshipDetails_description"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="14dp"
+                    android:layout_marginTop="10dp"
+                    android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+                    android:textColor="@color/black"/>
+            </LinearLayout>
 
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/btn_tv_internshipDetails_feedback"
-                android:layout_width="100dp"
-                android:layout_height="40dp"
-                android:text="Share"
-                android:textColor="@color/white"
-                android:backgroundTint="@color/blue"
-                android:visibility="gone"/>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:background="@color/white"
+                android:padding="10dp"
+                android:layout_marginTop="10dp">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="16dp"
+                    android:text="@string/learn_more"
+                    android:textColor="@color/black"
+                    android:textStyle="bold"/>
+
+                <TextView
+                    android:id="@+id/tv_internshipDetails_link"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="14dp"
+                    android:text="www.coolinternship.com"
+                    android:textColor="@color/black"/>
+            </LinearLayout>
         </LinearLayout>
-
-        <TextView
-            android:id="@+id/tv_internshipDetails_function"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="16dp"
-            android:text="Function"
-            android:textColor="@color/black"/>
-
-        <TextView
-            android:id="@+id/tv_internshipDetails_type"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="16dp"
-            android:text="Type"
-            android:textColor="@color/black"/>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:background="@color/white"
-        android:padding="10dp"
-        android:layout_marginTop="10dp">
-
-        <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="16dp"
-        android:text="Description"
-        android:textColor="@color/black"
-        android:textStyle="bold"/>
-
-        <TextView
-            android:id="@+id/tv_internshipDetails_description"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="14dp"
-            android:layout_marginTop="10dp"
-            android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
-            android:textColor="@color/black"/>
-    </LinearLayout>
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:background="@color/white"
-        android:padding="10dp"
-        android:layout_marginTop="10dp">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="16dp"
-            android:text="@string/learn_more"
-            android:textColor="@color/black"
-            android:textStyle="bold"/>
-
-        <TextView
-            android:id="@+id/tv_internshipDetails_link"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="14dp"
-            android:text="www.coolinternship.com"
-            android:textColor="@color/black"/>
-    </LinearLayout>
-
+    </ScrollView>
 </LinearLayout>
 
     <com.google.android.material.navigation.NavigationView
