--- a/app/src/main/res/layout/activity_company_edit_profile.xml
+++ b/app/src/main/res/layout/activity_company_edit_profile.xml
@@ -38,6 +38,41 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="16sp"
+                    android:text="Company Name"
+                    android:textColor="@color/black"
+                    android:layout_marginTop="20dp"/>
+
+                <EditText
+                    android:id="@+id/et_editCompanyCompanyName"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Company Name"
+                    android:ems="10"
+                    android:inputType="text"
+                    android:textSize="14dp"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="16sp"
+                    android:text="Industry"
+                    android:textColor="@color/black"
+                    android:layout_marginTop="20dp"/>
+
+                <androidx.appcompat.widget.AppCompatSpinner
+                    android:id="@+id/spinner_industry"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:entries="@array/industry_list"
+                    android:layout_marginTop="5dp"
+                    android:textSize="14dp"
+                    />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="16sp"
                     android:text="Contact Number"
                     android:textColor="@color/black"
                     android:layout_marginTop="20dp"/>
