--- a/app/src/main/res/layout/activity_company_profile.xml
+++ b/app/src/main/res/layout/activity_company_profile.xml
@@ -145,30 +145,30 @@
 
                 </LinearLayout>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:background="@color/white"
-                    android:padding="10dp"
-                    android:layout_marginTop="10dp">
+<!--                <LinearLayout-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:orientation="vertical"-->
+<!--                    android:background="@color/white"-->
+<!--                    android:padding="10dp"-->
+<!--                    android:layout_marginTop="10dp">-->
 
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:textSize="16dp"
-                        android:text="@string/learn_more"
-                        android:textColor="@color/black"
-                        android:textStyle="bold"/>
+<!--                    <TextView-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:textSize="16dp"-->
+<!--                        android:text="@string/learn_more"-->
+<!--                        android:textColor="@color/black"-->
+<!--                        android:textStyle="bold"/>-->
 
-                    <TextView
-                        android:id="@+id/tv_companyProfile_video"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:textSize="14dp"
-                        android:text="Youtube Video"
-                        android:textColor="@color/black"/>
-                </LinearLayout>
+<!--                    <TextView-->
+<!--                        android:id="@+id/tv_companyProfile_video"-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:textSize="14dp"-->
+<!--                        android:text="Youtube Video"-->
+<!--                        android:textColor="@color/black"/>-->
+<!--                </LinearLayout>-->
             </LinearLayout>
         </ScrollView>
     </LinearLayout>
