--- a/app/src/main/res/layout/activity_intern_edit_profile.xml
+++ b/app/src/main/res/layout/activity_intern_edit_profile.xml
@@ -55,7 +55,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="16dp"
-                android:text="Number"
+                android:text="Contact Number"
                 android:layout_marginTop="20dp"
                 android:textColor="@color/black"/>
 
